welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
golomb(1)=1
^golomb:13: error: not found: value k
while (k != freq(i) && i !=num) {
       ^golomb:14: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
golomb(i)=a
^golomb:15: error: not found: value k
k += 1}
^