welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var freq = new Array[Int](num)
var a = 0
var i = 1

golomb(1)=1
freq(1)=1





while (k != freq(i) && i !=num) {
golomb(i)=a
k += 1}

return i



}
